Added jquery reference to app page

--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
   </head>
   <body>
 	<script src="scripts/db.js" type="text/javascript"></script>
+	<script src="scripts/jquery.js" type="text/javascript"></script>
 	<script src="scripts/rsa.js" type="text/javascript"></script>
 	<script src="scripts/isotope.pkgd.js" type="text/javascript"></script>
 	<script src="scripts/cells-by-row.js" type="text/javascript"></script>
