--- a/app.html
+++ b/app.html
@@ -2,14 +2,15 @@
 <html style="overflow: auto;">
   <head>
 	<link href="style.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
 	<script src="scripts/db.js" type="text/javascript"></script>
+	<script src="scripts/script.js" type="text/javascript"></script>
 	<script src="scripts/jquery.js" type="text/javascript"></script>
 	<script src="scripts/rsa.js" type="text/javascript"></script>
 	<script src="scripts/isotope.pkgd.js" type="text/javascript"></script>
 	<script src="scripts/cells-by-row.js" type="text/javascript"></script>
-	<script src="scripts/script.js" type="text/javascript"></script>
 	<script src="scripts/login.js" type="text/javascript"></script>
   </body>
 </html>
