Add Crossfilter, DC & d3

--- a/app.html
+++ b/app.html
@@ -2,10 +2,14 @@
 <html style="overflow: auto;">
   <head>
 	<link href="style.css" rel="stylesheet">
+	<link href="dc.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
 	<script src="scripts/db.js" type="text/javascript"></script>
+	<script src="scripts/d3.js" type="text/javascript"></script>
+	<script src="scripts/dc.js" type="text/javascript"></script>
+	<script src="scripts/crossfilter.js" type="text/javascript"></script>
 	<script src="scripts/script.js" type="text/javascript"></script>
 	<script src="scripts/jquery.js" type="text/javascript"></script>
 	<script src="scripts/rsa.js" type="text/javascript"></script>
