--- a/app.html
+++ b/app.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html style="overflow: auto;">
   <head>
-	<link href="style.css" rel="stylesheet">
-	<link href="dc.css" rel="stylesheet">
+	<link href="css/dc.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">	
+	<link href="css/yay.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 	<script src="scripts/db.js" type="text/javascript"></script>
@@ -11,7 +14,10 @@
 	<script src="scripts/dc.js" type="text/javascript"></script>
 	<script src="scripts/crossfilter.js" type="text/javascript"></script>
 	<script src="scripts/script.js" type="text/javascript"></script>
-	<script src="scripts/jquery.js" type="text/javascript"></script>
+	<script src="scripts/jquery.min.js" type="text/javascript"></script>
+	<script src="scripts/bootstrap.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery.nanoscroller.min.js" type="text/javascript"></script>
+	<script src="scripts/yay.js" type="text/javascript"></script>
 	<script src="scripts/rsa.js" type="text/javascript"></script>
 	<script src="scripts/isotope.pkgd.js" type="text/javascript"></script>
 	<script src="scripts/cells-by-row.js" type="text/javascript"></script>
