--- a/wdc/index.html
+++ b/wdc/index.html
@@ -347,8 +347,8 @@
 				<p class="section-description centre instructions">There's a couple of data connections you can choose from. Please select the data you'd like below.</p>
 				<div class="section-description centre instructions">
 				  <select class="section-description centre instructions" id="selData">
-				    <option value="viewMonthly">Views (Monthly Stats)</option>
-				    <option value="viewWeekly">Views (Weekly Stats)</option>
+				    <option value="viewMonthly">Views - Monthly Stats</option>
+				    <option value="viewWeekly">Views - Weekly Stats (9.3 only)</option>
 						<option value="users">Users</option>
 						<option value="embeddatasources">Embedded Data Sources</option>
 				  </select>
