--- a/app.html
+++ b/app.html
@@ -6,7 +6,8 @@
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/yay.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-	<link href="css/style.css" rel="stylesheet">
+  <link href="css/magicsuggest-min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   </head>
@@ -27,7 +28,7 @@
   	<script src="scripts/isotope.pkgd.js" type="text/javascript"></script>
   	<script src="scripts/cells-by-row.js" type="text/javascript"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-
+    <script src="scripts/magicsuggest-min.js"></script>
   	<script src="scripts/login.js" type="text/javascript"></script>
   </body>
 </html>
