--- a/app.html
+++ b/app.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html style="overflow: auto;">
   <head>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/font-awesome.min.css" rel="stylesheet">
-	<link href="css/yay.min.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link href="css/magicsuggest-min.css" rel="stylesheet">
+	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
+	<link href="css/fontawesome/font-awesome.min.css" rel="stylesheet">
+	<link href="css/yay/yay.min.css" rel="stylesheet">
+	<!--<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>-->
+  <link href="css/magicsuggest/magicsuggest-min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="css/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="css/slick/slick-theme.css"/>
   </head>
   <body>
-    <script src="scripts/script.js" type="text/javascript"></script>
-    <script src="scripts/webserver.js" type="text/javascript"></script>
-  	<script src="scripts/db.js" type="text/javascript"></script>
-  	<script src="scripts/jquery.min.js" type="text/javascript"></script>
-  	<script src="scripts/bootstrap.min.js" type="text/javascript"></script>
-  	<script src="scripts/jquery.nanoscroller.min.js" type="text/javascript"></script>
-  	<script src="scripts/yay.js" type="text/javascript"></script>
-  	<script src="scripts/rsa.js" type="text/javascript"></script>
-  	<script src="scripts/isotope.pkgd.js" type="text/javascript"></script>
-  	<script src="scripts/cells-by-row.js" type="text/javascript"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="scripts/magicsuggest-min.js"></script>
-  	<script src="scripts/login.js" type="text/javascript"></script>
   </body>
+  <script src="js/bin/script.js" type="text/javascript"></script>
+  <script src="js/bin/webserver.js" type="text/javascript"></script>
+  <script src="js/bin/db.js" type="text/javascript"></script>
+  <script src="js/lib/jquery/jquery.min.js" type="text/javascript"></script>
+  <script src="js/lib/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+  <script src="js/lib/jquery/jquery.nanoscroller.min.js" type="text/javascript"></script>
+  <script src="js/lib/yay/yay.min.js" type="text/javascript"></script>
+  <script src="js/lib/tableau/rsa.js" type="text/javascript"></script>
+  <script src="js/lib/isotope/isotope.pkgd.min.js" type="text/javascript"></script>
+  <script src="js/lib/isotope/cells-by-row.js" type="text/javascript"></script>
+  <script src="js/lib/slick/slick.min.js" type="text/javascript" ></script>
+  <script src="js/lib/magicsuggest/magicsuggest-min.js"></script>
+  <script src="js/bin/login.js" type="text/javascript"></script>
 </html>
